[package]
authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
description = 'price pallet template'
edition = '2018'
homepage = 'https://setheum.xyz'
license = 'Apache-2.0 License'
name = 'price-feed'
repository = 'https://github.com/Setheum-Labs/Setheum/'
version = '0.5.0-dev'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = [ "derive"] }
safe-mix = { default-features = false, version = '1.0.1' }
frame-support = { default-features = false, version = "2.0.1" }
frame-system = { default-features = false, version = "2.0.1" }
# serp deps
serp-example-ocw = { default-features = false, package = 'serp-example-ocw', version = '0.1.1', git = 'https://github.com/JBA-Khalifa/serp-example-ocw' }
stp258-traits = { version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "serp-tes-pretty-messy" }

[dev-dependencies]
sp-core = { default-features = false, version = "2.0.0" }
sp-io = { default-features = false, version = "2.0.0" }
sp-runtime = { default-features = false, version = "2.0.0" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'serp-example-ocw/std',
	"stp258-traits/std",
]